# yarp

./: .gitignore  .pysisyphusrc  DUPLICATE_REMOVAL_STATUS.md  LICENSE.md  README.md  env.yaml  env_linux.yaml  env_mac.yaml  env_min.yaml  env_no_egat.yml  environment.yml  how-to-YARPatND.md  meta.yaml  open_docs.sh  pyproject.toml  reactant.xyz  setup.cfg  setup.py  test.py  test_rxn.py  tutorial.ipynb  uff_bug.ipynb
Metal-Example/: readme.md
crest-test/: .history.xyz  cregen_1.tmp  crest_conformers.xyz  crest_rotamers.xyz  gfnff_charges  wbo
debug/: enum_asses_250703.ipynb  enum_debug_250708.ipynb  find_lewis_demo_250701.ipynb  lewis_testing_suite.ipynb  smi2adj_test_250616.py  soumi_demo_250714.ipynb  yarp_again_demo_250605.ipynb
dev/: .tmp.mol  debug.ipynb  depth1.yaml  dev_smoke_aromatic.pkl  dev_smoke_depth1.pkl  dev_smoke_depth2.pkl  dev_smoke_isotope.pkl  dev_smoke_larger.pkl  dev_smoke_sparse_map.pkl  edit_plan.py  egat_map_normalizer_draft.py  failure_mode_notes.txt  ideas.txt  implementations_and_questions.txt  napthalene_log.txt  parser_dev.ipynb  parser_dev_plan.py  prompt_return1.txt  prompt_return2.txt  run_all_yaml_smokes.sh  tests_update_plan.txt
docs/: README.md  conf.py  index.rst  open_docs.sh  update_docs.sh  view_docs.sh
environment_yamls/: env.yaml
examples/: reaction.py
helper/: README.md  clean_failed_rxns.py  convert_to_classy.py  export_rxn_smi.py  read_pkl.py  update_yarp_pickles.py  xyz_smiles_from_pkl.py
helpers/: read_dft_pkl.py  read_irc_gbw.py  read_xtb_pkl.py  total_dft_pickle_dump.py
install/: README.md
reaction/: DA.p  (+33 more)
(+1323 files in other folders)
