[tool.setuptools_scm]
write_to = "version.py" # this currently does nothing... maybe we don't have version control flags in git repo?

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    autograd
    dask
    distributed
    h5py
    fabric
    jinja2
    joblib
    matplotlib
    numpy
    natsort
    psutil
    pyyaml
    rmsd
    scipy
    sympy
    scikit-learn
    pysisyphus
    yaml

[options.packages.find]
where = src

[options.extras_require]
test = pyscf; pytest; pytest-cov; ase; qcengine
doc = sphinx; sphinx-rtd-theme ; sphinx_autodoc_typehints

